# Horou

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/handlers/: HTTPHandler.cpp  HTTPHandler.h
src/handlers/bancho/: HTTPHandler.cpp  HTTPHandler.h
src/horou/: CMakeLists.txt  main.cpp
src/horou/events/: PacketManager.cpp  PacketManager.h
src/horou/handlers/bancho/: HTTPHandler.cpp  HTTPHandler.h
src/horou/managers/: PluginManager.cpp  PluginManager.h
src/io/buffer/: BinaryBuffer.cpp  BinaryBuffer.h  Buffer.cpp  Buffer.h  TextBuffer.cpp
src/io/network/http/: Request.h  Response.cpp  Response.h  Server.h
src/io/packets/: Packet.cpp  Packet.h
src/io/packets/server_packets/fun/: Announce.cpp
src/libhorou/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/libhorou/eventargs/: PacketManagerArgs.h
src/libhorou/io/buffer/: BinaryBuffer.h  Buffer.cpp  TextBuffer.h
src/libhorou/io/network/http/: Method.h  Request.cpp  Response.cpp  Response.h  Server.cpp
src/libhorou/io/packets/: PacketId.h
src/libhorou/io/packets/server_packets/: LoginResponse.cpp  LoginResponse.h
src/libhorou/io/packets/server_packets/fun/: Announce.h
src/libhorou/managers/: EventManager.cpp  EventManager.h
src/libhorou/objects/: Presence.cpp  Presence.h
src/libhorou/utils/: StringUtils.h
src/plugins/horou-core/: CMakeLists.txt  PluginEntry.cpp
src/utils/: StringUtils.cpp
